--- a/City.uproject
+++ b/City.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.20",
+	"EngineAssociation": "4.21",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -14,6 +14,5 @@
 			]
 		}
 	],
-	"Plugins": [
-	]
+	"Plugins": []
 }
